--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "webpack-dev-server": "^2.11.3"
   },
   "dependencies": {
+    "date-fns": "^1.29.0",
+    "helmet": "^3.14.0",
     "history": "^4.6.3",
     "immutable": "^3.8.1",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^15.5.0",
-    "react-day-picker": "^6.0.3",
+    "react-day-picker": "^6.2.1",
     "react-dom": "^15.5.0",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
